--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.17",
-   "typescript": "5.9.2"
-
+    "typescript": "^4.9.5"
   },
   "proxy": "http://localhost:5000"
 }
