--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-rtc-react": "^2.5.0",
     "axios": "^1.11.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
@@ -14,6 +15,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
