--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "agora-rtc-react": "^2.5.0",
     "axios": "^1.11.0",
+    "firebase": "^12.4.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
