--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "agora-rtc-react": "^2.5.0",
     "axios": "^1.11.0",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.26",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
